--- a/day-16-alien-title-sequence/src/index.html
+++ b/day-16-alien-title-sequence/src/index.html
@@ -1,7 +1,7 @@
 <div class="text-container"> 
   <div class="fwdSlash A1"> </div>
   <div class="backSlash A2"> </div>
-  <div class="horizLine A3"> </div>  
+  <div class="horizLine lastAE A3"> </div>  
   <div class="vertLine L1"> </div>  
   <div class="horizLine L2"> </div>
   <div class="vertLine I"> </div>
@@ -10,7 +10,7 @@
     <div class="horizLine hzTop"></div>
     <div class="horizLine hzBottom"></div>
   </div>  
-  <div class="horizLine E3"> </div>
+  <div class="horizLine lastAE E3"> </div>
   <div class="backSlash N1"> </div>
   <div class="vertLine N2"> </div>  
   <div class="vertLine N3"> </div>
